Realtime Chat Feature Complete

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:text="Send OTP"
         android:textSize="15sp"
         android:paddingRight="40dp"
-        android:background="#25d366">
+        android:background="#3CDBC0">
     </android.widget.Button>
 
     <ProgressBar
