--- a/app/src/main/res/layout/activity_set_profile.xml
+++ b/app/src/main/res/layout/activity_set_profile.xml
@@ -15,7 +15,7 @@
         android:fontFamily="@font/raleway"
         android:layout_above="@+id/getuserimage"
         android:layout_marginBottom="30dp"
-        android:textColor="#25d366"
+        android:textColor="#3CDBC0"
         android:textStyle="bold"
         android:layout_centerHorizontal="true">
     </TextView>
@@ -63,7 +63,7 @@
         android:text="Save Profile"
         android:textColor="@color/white"
         android:layout_marginTop="20dp"
-        android:background="#25d366">
+        android:background="#3CDBC0">
     </android.widget.Button>
 
     <ProgressBar
